syntax = "proto3";

package com.proto.pagamento; 

option java_multiple_files = true;
option java_package = "com.leilao.common.grpc.pagamento"; // Pacote Java que será gerado

service PagamentoService {
    // Cria link de pagamento (Leilão chama quando acha vencedor)
    rpc SolicitarPagamento (PagamentoRequestProto) returns (PagamentoResponseProto);
}

message PagamentoRequestProto {
    int32 leilao_id = 1;
    int32 cliente_id = 2;
    double valor = 3;
}

message PagamentoResponseProto {
    string link_pagamento = 1;
    string status = 2;
}